# testwinci

./: README  appveyor.yml
assets/: README
documentation/: index.md
example/: app.js
windows/: CMakeLists.txt  README.md  manifest
windows/cmake/: ComTest_Config.cmake
windows/include/: ComTest.hpp
windows/plugins/hooks/: windows.js
windows/src/: ComTest.cpp
windows/test/: CMakeLists.txt
